OIDC Support Implementation